After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 671328 - Launchers triggering position reshuffle by requesting too much size
Launchers triggering position reshuffle by requesting too much size
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: panel
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-03-05 01:31 UTC by Peter Hurley
Modified: 2012-03-05 08:50 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
[Patch 1/1] Fix position re-shuffling caused by launchers (3.01 KB, patch)
2012-03-05 01:31 UTC, Peter Hurley
committed Details | Review

Description Peter Hurley 2012-03-05 01:31:55 UTC
Created attachment 208968 [details] [review]
[Patch 1/1] Fix position re-shuffling caused by launchers

The launchers are triggering position reshuffling by accidentally requesting too much size. This happens on initial start and when switching a panel's orientation (eg, from the Properties dialog).

The launcher's ButtonWidget size is determined by the parent's allocation (the parent is the enclosing PanelWidget). But, this allocation can be stale or uninitialized. For example, when switching a panel's orientation, the children are queried for their preferred size *before* the size_allocate occurs, so the PanelWidget's allocation, at the time the ButtonWidget is queried for it's preferred size, reflects the values of the current orientation, not the one which is in the process of occurring.
Comment 1 Vincent Untz 2012-03-05 08:50:12 UTC
Comment on attachment 208968 [details] [review]
[Patch 1/1] Fix position re-shuffling caused by launchers

Thanks, pushed (patch didn't apply for some reason, so had to recreate it).